alignment fixes and new hero image

--- a/css/nav.css
+++ b/css/nav.css
@@ -25,7 +25,7 @@
 
 .line1, .line2, .line3 {
   margin-top:5px;
-  background-color:#ee701b;
+  background-color:#7C5D58;
   width:25px;
   height:3px;
   display:block;
